[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Akshay kumar C P <akshay-kumar.c-p@capgemini.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^3.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
